* cleaned up the XML syntax file, providing support for JSP syntax (by   embedding the Java Source syntax), fixing the increaseIndentPattern,   adding <> as highlight pairs, and highlighting trailing spaces and   evil tabs. * added test files for xml and properties syntaxes * added highlighting for trailing spaces and evil tabs to java source   syntax * removed support for JSP from HTML bundle
git-svn-id: http://svn.textmate.org/trunk/Java.tmbundle@44 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -98,5 +98,18 @@
 	        "foregroundColor[1]" = "#CC33FF";
 		},
 
+		/* trailing whitespace */
+		{
+		    name = "Trailing whitespace";
+		    match = "\\s+$";
+		    backgroundColor = "#ffc9ae";
+		},
+
+		/* death to tabs! */
+		{
+		    name = "tabs";
+		    match = "\t";
+		    backgroundColor = "#e6f0ff";
+		},
 	);
 }
