updated XML bundle for proper folding and indenting, and tweaked colors slightly
git-svn-id: http://svn.textmate.org/trunk/Java.tmbundle@47 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -3,11 +3,11 @@
 	
 	fileTypes = ( java );
 	
-	foldingStartMarker = "(\\{\\s*$)";
-	foldingStopMarker = "(^\\s*\\})";
-	
+	foldingStartMarker = "\\{\\s*$";
+	foldingStopMarker = "^\\s*\\}";
+
 	increaseIndentPattern = "^.*(\\{[^}\"']*|\\([^)\"']*)$";
-	
+
 	smartTypingPairs = (
         ( "(", ")" ),
 	    ( "[", "]" ),
