added keywords to identify files
git-svn-id: http://svn.textmate.org/trunk/Java.tmbundle@48 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -1,3 +1,10 @@
+/**
+ ** Java syntax dictionary for TextMate.
+ ** Author: Brian Lalor <blalor@bravo5.org>
+ **
+ ** $URL$
+ ** $Id$
+ **/
 {
 	name = "Java Source";
 	
