--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -64,7 +64,7 @@
 		
 		{
 			name = "Keyword";
-			match = "\\<(return|goto|if|else|case|default|switch|break|continue|while|do|for|instanceof|super|this|import|implements|package|class|throw|throws|try|catch|finally|void|new|null)\\>"; 
+			match = "\\<(return|goto|if|else|case|default|switch|break|continue|while|do|for|instanceof|super|this|import|implements|extends|package|class|throw|throws|try|catch|finally|void|new|null)\\>"; 
 
 			fontStyle = ( bold );
 			foregroundColor = "#0066ff";
@@ -79,7 +79,7 @@
 		
 		{
 			name = "Numeric Constant";
-			match = "\\<((0(x|X)[0-9a-fA-F]*)|(([0-9]+\\.?[0-9]*)|(\\.[0-9]+))((e|E)(\\+|-)?[0-9]+)?)(L|l|UL|ul|u|U|F|f)?\\>";
+			match = "\\<((0(x|X)[0-9a-fA-F]*)|(([0-9]+\\.?[0-9]*)|(\\.[0-9]+))((e|E)(\\+|-)?[0-9]+)?)([LlFfUuDd]|UL|ul|)?\\>";
 			foregroundColor = "#009966";
 		},
 		
