made snippets mode-restricted
git-svn-id: http://svn.textmate.org/trunk/Java.tmbundle@50 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Snippets/010 bean setter and getter.plist
+++ b/Snippets/010 bean setter and getter.plist
@@ -27,6 +27,8 @@ public ${2:TYPE} get${1:METHOD_NAME}() {
 	<string>@B</string>
 	<key>name</key>
 	<string>bean setter and getter</string>
+	<key>restrainToMode</key>
+	<true/>
 	<key>trigger</key>
 	<string>bean</string>
 </dict>
