--- a/Snippets/020 method.plist
+++ b/Snippets/020 method.plist
@@ -18,5 +18,7 @@ public ${2:RETURN} ${1:METHOD}() {
 	<string>method</string>
 	<key>trigger</key>
 	<string>meth</string>
+	<key>restrainToMode</key>
+	<true/>
 </dict>
 </plist>
