fixed up templates to work properly with their new directory structure.
git-svn-id: http://svn.textmate.org/trunk/Java.tmbundle@54 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Templates/Java Class/Info.plist
+++ b/Templates/Java Class/Info.plist
@@ -1,5 +1,5 @@
 {
 	name = "Java Class";
 	extension = "java";
-	command = "/bin/bash ../templatize.sh";
+	command = "/bin/bash ../templatize.sh class-insert.java";
 }
