--- a/Templates/Java Interface/Info.plist
+++ b/Templates/Java Interface/Info.plist
@@ -1,5 +1,5 @@
 {
 	name = "Java Interface";
 	extension = "java";
-	command = "/bin/bash ../templatize.sh";
+	command = "/bin/bash ../templatize.sh iface-insert.java";
 }
