updated Java bundle with snippets, commands and ideas from lang@langriley.com.
git-svn-id: http://svn.textmate.org/trunk/Java.tmbundle@55 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -64,7 +64,7 @@
 		
 		{
 			name = "Keyword";
-			match = "\\<(return|goto|if|else|case|default|switch|break|continue|while|do|for|instanceof|super|this|import|implements|extends|package|class|throw|throws|try|catch|finally|void|new|null)\\>"; 
+			match = "\\<(return|goto|if|else|case|default|switch|break|continue|while|do|for|instanceof|super|this|import|implements|extends|package|class|interface|throw|throws|try|catch|finally|void|new|null)\\>"; 
 
 			fontStyle = ( bold );
 			foregroundColor = "#0066ff";
