Each macro, snippet, and command now has a UUID. Also removed the bundlePath property in those items which had one.
git-svn-id: http://svn.textmate.org/trunk/Java.tmbundle@61 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Commands/Java list methods.plist
+++ b/Commands/Java list methods.plist
@@ -4,8 +4,6 @@
 <dict>
 	<key>beforeRunningCommand</key>
 	<string>nop</string>
-	<key>restrainToMode</key>
-	<true/>
 	<key>command</key>
 	<string>cat `egrep -rnsl "class[ ]+$TM_SELECTED_TEXT[ ]+" .` | egrep "public[ ]+\&lt;.*\&gt;[ ]+\&lt;.*\&gt;\(.*\)[ ]+(throws .*|){"</string>
 	<key>input</key>
@@ -14,5 +12,9 @@
 	<string>Java list methods</string>
 	<key>output</key>
 	<string>separateWindow</string>
+	<key>restrainToMode</key>
+	<true/>
+	<key>uuid</key>
+	<string>DA0A58E2-5F16-11D9-B9C3-000D93589AF6</string>
 </dict>
 </plist>
