--- a/Snippets/Java public method.plist
+++ b/Snippets/Java public method.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>restrainToMode</key>
-    <true/>
 	<key>content</key>
 	<string>/**
  * $2
@@ -20,7 +18,11 @@ public ${1:void} $2(${3:String} $4) {
 </string>
 	<key>name</key>
 	<string>Java public method</string>
+	<key>restrainToMode</key>
+	<true/>
 	<key>trigger</key>
 	<string>jpum</string>
+	<key>uuid</key>
+	<string>BC8B9318-5F16-11D9-B9C3-000D93589AF6</string>
 </dict>
 </plist>
