--- a/Snippets/Java while statement.plist
+++ b/Snippets/Java while statement.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>restrainToMode</key>
-    <true/>
 	<key>content</key>
 	<string>while ($1) { // $2
 
@@ -12,7 +10,11 @@
 }</string>
 	<key>name</key>
 	<string>Java while statement</string>
+	<key>restrainToMode</key>
+	<true/>
 	<key>trigger</key>
 	<string>jwh</string>
+	<key>uuid</key>
+	<string>BC8B945A-5F16-11D9-B9C3-000D93589AF6</string>
 </dict>
 </plist>
