--- a/Snippets/method.plist
+++ b/Snippets/method.plist
@@ -16,9 +16,11 @@ public ${2:RETURN} ${1:METHOD}() {
 	<string>@M</string>
 	<key>name</key>
 	<string>method</string>
-	<key>trigger</key>
-	<string>meth</string>
 	<key>restrainToMode</key>
 	<true/>
+	<key>trigger</key>
+	<string>meth</string>
+	<key>uuid</key>
+	<string>BC8B95CA-5F16-11D9-B9C3-000D93589AF6</string>
 </dict>
 </plist>
