--- a/Commands/Find j-interf declar.plist
+++ b/Commands/Find j-interf declar.plist
@@ -4,8 +4,6 @@
 <dict>
 	<key>beforeRunningCommand</key>
 	<string>nop</string>
-	<key>restrainToMode</key>
-	<true/>
 	<key>captureFormatString</key>
 	<string>$1 $2</string>
 	<key>capturePattern</key>
@@ -22,5 +20,9 @@
 	<string>Find j-interf declar</string>
 	<key>output</key>
 	<string>separateWindow</string>
+	<key>restrainToMode</key>
+	<true/>
+	<key>uuid</key>
+	<string>DA0A5704-5F16-11D9-B9C3-000D93589AF6</string>
 </dict>
 </plist>
