--- a/Commands/ant.plist
+++ b/Commands/ant.plist
@@ -21,5 +21,7 @@ ant -emacs -s build.xml</string>
 	<string>ant</string>
 	<key>output</key>
 	<string>separateWindow</string>
+	<key>uuid</key>
+	<string>DA0A5984-5F16-11D9-B9C3-000D93589AF6</string>
 </dict>
 </plist>
