--- a/Snippets/Java JUnit test class def.plist
+++ b/Snippets/Java JUnit test class def.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>restrainToMode</key>
-    <true/>
 	<key>content</key>
 	<string>package `echo $TM_FILEPATH |  sed 's/\//./g' | sed 's/^.//' | sed 's/.*test.//' | sed 's/.[A-Za-z]*.java//g'`;
 
@@ -31,7 +29,11 @@ public class ${2:`echo $TM_FILEPATH |  sed 's/\//./g' | sed 's/^.//' | sed 's/.*
 }</string>
 	<key>name</key>
 	<string>Java JUnit test class def</string>
+	<key>restrainToMode</key>
+	<true/>
 	<key>trigger</key>
 	<string>jtest</string>
+	<key>uuid</key>
+	<string>BC8B8EAC-5F16-11D9-B9C3-000D93589AF6</string>
 </dict>
 </plist>
