--- a/Snippets/Java const def.plist
+++ b/Snippets/Java const def.plist
@@ -2,13 +2,15 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>restrainToMode</key>
-    <true/>
 	<key>content</key>
 	<string>private static final ${1:String} $2 = "$0";</string>
 	<key>name</key>
 	<string>Java const def</string>
+	<key>restrainToMode</key>
+	<true/>
 	<key>trigger</key>
 	<string>jps</string>
+	<key>uuid</key>
+	<string>BC8B8F52-5F16-11D9-B9C3-000D93589AF6</string>
 </dict>
 </plist>
