--- a/Snippets/Java if statement.plist
+++ b/Snippets/Java if statement.plist
@@ -2,15 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>restrainToMode</key>
-    <true/>
 	<key>content</key>
 	<string>if ($1) { // $2
    $0
 }</string>
 	<key>name</key>
 	<string>Java if statement</string>
+	<key>restrainToMode</key>
+	<true/>
 	<key>trigger</key>
 	<string>jif</string>
+	<key>uuid</key>
+	<string>BC8B8FE3-5F16-11D9-B9C3-000D93589AF6</string>
 </dict>
 </plist>
