--- a/Snippets/Java if:else statement.plist
+++ b/Snippets/Java if:else statement.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>restrainToMode</key>
-    <true/>
 	<key>content</key>
 	<string>if ($1) { // $2
 
@@ -18,7 +16,11 @@
 </string>
 	<key>name</key>
 	<string>Java if/else statement</string>
+	<key>restrainToMode</key>
+	<true/>
 	<key>trigger</key>
 	<string>jelse</string>
+	<key>uuid</key>
+	<string>BC8B908F-5F16-11D9-B9C3-000D93589AF6</string>
 </dict>
 </plist>
