--- a/Snippets/Java logger.plist
+++ b/Snippets/Java logger.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>restrainToMode</key>
-    <true/>
 	<key>content</key>
 	<string>import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
@@ -12,7 +10,11 @@ import org.apache.commons.logging.LogFactory;
  protected final Log logger = LogFactory.getLog(getClass());</string>
 	<key>name</key>
 	<string>Java logger</string>
+	<key>restrainToMode</key>
+	<true/>
 	<key>trigger</key>
 	<string>jlog</string>
+	<key>uuid</key>
+	<string>BC8B9129-5F16-11D9-B9C3-000D93589AF6</string>
 </dict>
 </plist>
