--- a/Snippets/Java try:catch:finally.plist
+++ b/Snippets/Java try:catch:finally.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>restrainToMode</key>
-    <true/>
 	<key>content</key>
 	<string>try {
 
@@ -20,7 +18,11 @@
 }</string>
 	<key>name</key>
 	<string>Java try/catch/finally</string>
+	<key>restrainToMode</key>
+	<true/>
 	<key>trigger</key>
 	<string>jtc</string>
+	<key>uuid</key>
+	<string>BC8B93B6-5F16-11D9-B9C3-000D93589AF6</string>
 </dict>
 </plist>
