--- a/Snippets/bean setter and getter.plist
+++ b/Snippets/bean setter and getter.plist
@@ -31,5 +31,7 @@ public ${2:TYPE} get${1:METHOD_NAME}() {
 	<true/>
 	<key>trigger</key>
 	<string>bean</string>
+	<key>uuid</key>
+	<string>BC8B9506-5F16-11D9-B9C3-000D93589AF6</string>
 </dict>
 </plist>
