--- a/info.plist
+++ b/info.plist
@@ -4,6 +4,29 @@
 <dict>
 	<key>name</key>
 	<string>Java</string>
+	<key>ordering</key>
+	<array>
+		<string>DA0A5984-5F16-11D9-B9C3-000D93589AF6</string>
+		<string>DA0A5845-5F16-11D9-B9C3-000D93589AF6</string>
+		<string>DA0A5704-5F16-11D9-B9C3-000D93589AF6</string>
+		<string>DA0A57A9-5F16-11D9-B9C3-000D93589AF6</string>
+		<string>DA0A58E2-5F16-11D9-B9C3-000D93589AF6</string>
+		<string>DA0A565B-5F16-11D9-B9C3-000D93589AF6</string>
+		<string>BC8B8F52-5F16-11D9-B9C3-000D93589AF6</string>
+		<string>BC8B9272-5F16-11D9-B9C3-000D93589AF6</string>
+		<string>BC8B8FE3-5F16-11D9-B9C3-000D93589AF6</string>
+		<string>BC8B91CE-5F16-11D9-B9C3-000D93589AF6</string>
+		<string>BC8B9129-5F16-11D9-B9C3-000D93589AF6</string>
+		<string>BC8B9318-5F16-11D9-B9C3-000D93589AF6</string>
+		<string>BC8B8E05-5F16-11D9-B9C3-000D93589AF6</string>
+		<string>BC8B908F-5F16-11D9-B9C3-000D93589AF6</string>
+		<string>BC8B93B6-5F16-11D9-B9C3-000D93589AF6</string>
+		<string>BC8B9506-5F16-11D9-B9C3-000D93589AF6</string>
+		<string>BC8B945A-5F16-11D9-B9C3-000D93589AF6</string>
+		<string>BC8B8EAC-5F16-11D9-B9C3-000D93589AF6</string>
+		<string>2A28E50A-6B1D-11D9-8689-000D93589AF6</string>
+		<string>2B449DF6-6B1D-11D9-94EC-000D93589AF6</string>
+	</array>
 	<key>uuid</key>
 	<string>4677FEB2-6227-11D9-BFB1-000D93589AF6</string>
 </dict>
