Removed key equiv. from method snippet.
git-svn-id: http://svn.textmate.org/trunk/Java.tmbundle@131 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Snippets/method.plist
+++ b/Snippets/method.plist
@@ -13,12 +13,10 @@ public ${2:RETURN} ${1:METHOD}() {
 // }}}
 </string>
 	<key>keyEquivalent</key>
-	<string>@M</string>
+	<string></string>
 	<key>name</key>
 	<string>method</string>
-	<key>restrainToMode</key>
-	<true/>
-	<key>trigger</key>
+	<key>tabTrigger</key>
 	<string>meth</string>
 	<key>uuid</key>
 	<string>BC8B95CA-5F16-11D9-B9C3-000D93589AF6</string>
