reworked syntax highlighting in Java bundle, primarily to get the full complement of reserved words.  I'm not done with the colors, but I wanted to get these changes in...
git-svn-id: http://svn.textmate.org/trunk/Java.tmbundle@174 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Snippets/Java if:else statement.plist
+++ b/Snippets/Java if:else statement.plist
@@ -15,10 +15,8 @@
 
 </string>
 	<key>name</key>
-	<string>Java if/else statement</string>
-	<key>restrainToMode</key>
-	<true/>
-	<key>trigger</key>
+	<string>if/else statement</string>
+	<key>tabTrigger</key>
 	<string>jelse</string>
 	<key>uuid</key>
 	<string>BC8B908F-5F16-11D9-B9C3-000D93589AF6</string>
