--- a/Snippets/Java private method.plist
+++ b/Snippets/Java private method.plist
@@ -15,10 +15,8 @@ private ${1:void} $2(${3:String} $4) {
 
 }</string>
 	<key>name</key>
-	<string>Java private method</string>
-	<key>restrainToMode</key>
-	<true/>
-	<key>trigger</key>
+	<string>private method</string>
+	<key>tabTrigger</key>
 	<string>jpm</string>
 	<key>uuid</key>
 	<string>BC8B91CE-5F16-11D9-B9C3-000D93589AF6</string>
