--- a/Snippets/Java private var.plist
+++ b/Snippets/Java private var.plist
@@ -7,10 +7,8 @@
 
 $0</string>
 	<key>name</key>
-	<string>Java private var</string>
-	<key>restrainToMode</key>
-	<true/>
-	<key>trigger</key>
+	<string>private var</string>
+	<key>tabTrigger</key>
 	<string>jpv</string>
 	<key>uuid</key>
 	<string>BC8B9272-5F16-11D9-B9C3-000D93589AF6</string>
