--- a/Snippets/Java try:catch:finally.plist
+++ b/Snippets/Java try:catch:finally.plist
@@ -4,23 +4,15 @@
 <dict>
 	<key>content</key>
 	<string>try {
-
    $2
-
 } catch ($1 e) {
-
    $3
-
 } finally {
-
    $0
-
 }</string>
 	<key>name</key>
-	<string>Java try/catch/finally</string>
-	<key>restrainToMode</key>
-	<true/>
-	<key>trigger</key>
+	<string>try/catch/finally</string>
+	<key>tabTrigger</key>
 	<string>jtc</string>
 	<key>uuid</key>
 	<string>BC8B93B6-5F16-11D9-B9C3-000D93589AF6</string>
