--- a/Syntaxes/JavaProperties.plist
+++ b/Syntaxes/JavaProperties.plist
@@ -6,8 +6,8 @@
 	name = "Java Properties";
 	fileTypes = ( properties );
 
-	foregroundColor = "#333333";
-	backgroundColor = "#ffffff";
+	foregroundColor = "#AAAAAA";
+	backgroundColor = "#000000";
 
 	patterns = (
 		/* comments */
@@ -25,8 +25,8 @@
 		{
 			name = "keywords.variables.java-props";
 			match = "^([^:=]+)[:=](.*)$";
-			"foregroundColor[1]" = "#00FF00";
-			"foregroundColor[2]" = "#0000FF";
+			"foregroundColor[1]" = "#d600d6";
+			"foregroundColor[2]" = "#d6d600";
 		},
 	);
 	uuid = "2A28E50A-6B1D-11D9-8689-000D93589AF6";
