--- a/Snippets/JSTL c:out.plist
+++ b/Snippets/JSTL c:out.plist
@@ -5,10 +5,8 @@
 	<key>content</key>
 	<string>&lt;c:out value="\${$1}"/&gt;$0</string>
 	<key>name</key>
-	<string>JSTL c:out</string>
-	<key>restrainToMode</key>
-	<true/>
-	<key>trigger</key>
+	<string>c:out</string>
+	<key>tabTrigger</key>
 	<string>jcout</string>
 	<key>uuid</key>
 	<string>BC8B8E05-5F16-11D9-B9C3-000D93589AF6</string>
