--- a/Snippets/Java JUnit test class def.plist
+++ b/Snippets/Java JUnit test class def.plist
@@ -28,10 +28,8 @@ public class ${2:`echo $TM_FILEPATH |  sed 's/\//./g' | sed 's/^.//' | sed 's/.*
    }
 }</string>
 	<key>name</key>
-	<string>Java JUnit test class def</string>
-	<key>restrainToMode</key>
-	<true/>
-	<key>trigger</key>
+	<string>JUnit test class def</string>
+	<key>tabTrigger</key>
 	<string>jtest</string>
 	<key>uuid</key>
 	<string>BC8B8EAC-5F16-11D9-B9C3-000D93589AF6</string>
