--- a/Snippets/Java const def.plist
+++ b/Snippets/Java const def.plist
@@ -5,10 +5,8 @@
 	<key>content</key>
 	<string>private static final ${1:String} $2 = "$0";</string>
 	<key>name</key>
-	<string>Java const def</string>
-	<key>restrainToMode</key>
-	<true/>
-	<key>trigger</key>
+	<string>const def</string>
+	<key>tabTrigger</key>
 	<string>jps</string>
 	<key>uuid</key>
 	<string>BC8B8F52-5F16-11D9-B9C3-000D93589AF6</string>
