--- a/Snippets/Java public method.plist
+++ b/Snippets/Java public method.plist
@@ -17,10 +17,8 @@ public ${1:void} $2(${3:String} $4) {
 
 </string>
 	<key>name</key>
-	<string>Java public method</string>
-	<key>restrainToMode</key>
-	<true/>
-	<key>trigger</key>
+	<string>public method</string>
+	<key>tabTrigger</key>
 	<string>jpum</string>
 	<key>uuid</key>
 	<string>BC8B9318-5F16-11D9-B9C3-000D93589AF6</string>
