--- a/Snippets/Java while statement.plist
+++ b/Snippets/Java while statement.plist
@@ -9,10 +9,8 @@
 
 }</string>
 	<key>name</key>
-	<string>Java while statement</string>
-	<key>restrainToMode</key>
-	<true/>
-	<key>trigger</key>
+	<string>while statement</string>
+	<key>tabTrigger</key>
 	<string>jwh</string>
 	<key>uuid</key>
 	<string>BC8B945A-5F16-11D9-B9C3-000D93589AF6</string>
