--- a/Snippets/bean setter and getter.plist
+++ b/Snippets/bean setter and getter.plist
@@ -26,10 +26,8 @@ public ${2:TYPE} get${1:METHOD_NAME}() {
 	<key>keyEquivalent</key>
 	<string>@B</string>
 	<key>name</key>
-	<string>bean setter and getter</string>
-	<key>restrainToMode</key>
-	<true/>
-	<key>trigger</key>
+	<string>setter and getter</string>
+	<key>tabTrigger</key>
 	<string>bean</string>
 	<key>uuid</key>
 	<string>BC8B9506-5F16-11D9-B9C3-000D93589AF6</string>
