• added command to HTMLify ant output; needs to be improved to not buffer   entire output before regurgitating. • updated bean snippet to be a little more friendly • modified JCL field to be "log" instead of "logger" • renamed java syntax to "Java"
git-svn-id: http://svn.textmate.org/trunk/Java.tmbundle@238 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Commands/ant.plist
+++ b/Commands/ant.plist
@@ -9,18 +9,23 @@
 	<key>capturePattern</key>
 	<string>^(.*?):([0-9]+):.*</string>
 	<key>command</key>
-	<string>cd $TM_DIRECTORY
-ant -emacs -s build.xml</string>
+	<string>cd "$TM_DIRECTORY"
+
+ant -s build.xml 2&gt;&amp;1 | "$TM_BUNDLE_PATH/Commands/htmlize_ant.py" 
+
+</string>
 	<key>fileCaptureRegister</key>
 	<string>1</string>
 	<key>input</key>
 	<string>none</string>
+	<key>keyEquivalent</key>
+	<string></string>
 	<key>lineCaptureRegister</key>
 	<string>2</string>
 	<key>name</key>
 	<string>ant</string>
 	<key>output</key>
-	<string>separateWindow</string>
+	<string>showAsHTML</string>
 	<key>uuid</key>
 	<string>DA0A5984-5F16-11D9-B9C3-000D93589AF6</string>
 </dict>
