--- a/Snippets/Java logger.plist
+++ b/Snippets/Java logger.plist
@@ -4,7 +4,7 @@
 <dict>
 	<key>content</key>
 	<string>/** Logger for this class and subclasses. */
-protected final Log logger = LogFactory.getLog(getClass());
+protected final Log log = LogFactory.getLog(getClass());
 </string>
 	<key>name</key>
 	<string>logger</string>
