--- a/Snippets/bean setter and getter.plist
+++ b/Snippets/bean setter and getter.plist
@@ -3,23 +3,23 @@
 <plist version="1.0">
 <dict>
 	<key>content</key>
-	<string>// {{{ set${1:METHOD_NAME}
+	<string>// {{{ set${1:FieldName}
 /**
- * Setter for ${3:FIELD_NAME}.
- * @param new${1:METHOD_NAME} new value for ${3:FIELD_NAME}
+ * Setter for ${3:fieldName}.
+ * @param new${1:FieldName} new value for ${3:fieldName}
  */
-public void set${1:METHOD_NAME}(${2:TYPE} new${1:METHOD_NAME}) {
-    ${3:FIELD_NAME} = new${1:METHOD_NAME};
+public void set${1:FieldName}(${2:String} new${1:FieldName}) {
+    ${3:fieldName} = new${1:FieldName};
 }
 // }}}
 
-// {{{ get${1:METHOD_NAME}
+// {{{ get${1:FieldName}
 /**
- * Getter for ${3:FIELD_NAME}.
- * @return ${3:FIELD_NAME}
+ * Getter for ${3:fieldName}.
+ * @return ${3:fieldName}
  */
-public ${2:TYPE} get${1:METHOD_NAME}() {
-    return ${3:FIELD_NAME};
+public ${2:String} get${1:FieldName}() {
+    return ${3:fieldName};
 }
 // }}}    
 </string>
