--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -8,7 +8,8 @@
  ** http://www.javacamp.org/javaI/reservedWords.html
  **/
 {
-	name = "Java Source";
+	name = "Java";
+	uuid = "2B449DF6-6B1D-11D9-94EC-000D93589AF6";
 	
 	/* .bsh for BeanShell scripts */
 	fileTypes = ( java, bsh );
@@ -174,5 +175,4 @@
 			foregroundColor = "#669933";
 		},
 	);
-	uuid = "2B449DF6-6B1D-11D9-94EC-000D93589AF6";
 }
