--- a/Syntaxes/JavaProperties.plist
+++ b/Syntaxes/JavaProperties.plist
@@ -4,6 +4,7 @@
 	------*/
 	
 	name = "Java Properties";
+	scopeName = "source.java-properties";
 	fileTypes = ( properties );
 
 	foregroundColor = "#AAAAAA";
