--- a/Syntaxes/JavaProperties.plist
+++ b/Syntaxes/JavaProperties.plist
@@ -4,31 +4,28 @@
 	------*/
 	
 	name = "Java Properties";
-	scopeName = "source.java-properties";
+	scopeName = "source.java-props";
 	fileTypes = ( properties );
-
-	foregroundColor = "#AAAAAA";
-	backgroundColor = "#000000";
 
 	patterns = (
 		/* comments */
 		{
-			name = "comment.line.java-props";
-			match = "[#!].+$";
-			foregroundColor = "red";
+			name = "comment.line.number-sign.java-props";
+			match = "[#!](.+)?$";
 		},
 
  		/* KEY = VALUE PAIRS */
  		/*
-         * Not compliant with the properties file spec, but this works me, and
-         * I'm the one who counts around here.
+         * Not compliant with the properties file spec, but this works for me,
+         * and I'm the one who counts around here.
  		 */
 		{
-			name = "keyword.variable.java-props";
 			match = "^([^:=]+)[:=](.*)$";
-			"foregroundColor[1]" = "#d600d6";
-			"foregroundColor[2]" = "#d6d600";
+			captures = {
+			    1 = { name = "keyword.java-props"; };
+			};
 		},
 	);
+
 	uuid = "2A28E50A-6B1D-11D9-8689-000D93589AF6";
 }
